--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <!--Titles-->
     <string name="title_signup">CADASTRO</string>
+    <string name="title_dialog_permission">Permissão requerida</string>
 
     <!--Hints-->
     <string name="hint_service">Serviço</string>
@@ -53,6 +54,9 @@
     <string name="err_msg_must_select_state">Selecione um estado</string>
     <string name="err_msg_existing_email">Este email já está em uso</string>
     <string name="err_msg_server_fail">Houve uma falha. Tente novamente mais tarde.</string>
+    <string name="dialog_permission_agree_button">Ok</string>
+    <string name="dialog_permission_disagree_button">Cancelar</string>
+    <string name="title_crop_activity">Cortar Imagem</string>
 
     <!--Arrays-->
     <string-array name="array_states">
